gcc/testsuite/rust/rustc/ui/parser/attribute/attr-with-a-semicolon.rs
#[derive(Debug, Clone)]; // { dg-error "" "" { target *-*-* } }
struct Foo;

fn main() {}

